# Ground-Station

./: MQTT_FLOW.md  README.md
Hardware/GSPCB/: Final_GSPCB-all.pos  Final_GSPCB.kicad_pcb  Final_GSPCB.kicad_pro  GSPCB.kicad_pcb  GSPCB.kicad_prl  GSPCB.kicad_pro  GSPCB.kicad_sch  V1_GSPCB.kicad_pcb  V1_GSPCB.kicad_pro  Version2_GSPCB.kicad_pcb  Version2_GSPCB.kicad_pro  Version3_GSPCB.kicad_pcb  Version3_GSPCB.kicad_prl  Version3_GSPCB.kicad_pro  Version4_GSPCB.kicad_pcb  Version4_GSPCB.kicad_prl  Version4_GSPCB.kicad_pro  _autosave-untitled.kicad_sch  fp-info-cache  fp-lib-table
Hardware/GSPCB/active-drag-system.pretty/: RGF0040E-IPC_A.kicad_mod  RGF0040E-IPC_B.kicad_mod  RGF0040E-IPC_C.kicad_mod  SDO_CFP5_SOD128_NEX-L.kicad_mod  SDO_CFP5_SOD128_NEX-M.kicad_mod  STP55NF06.kicad_mod  SW4_PTS815_SJM_250_SMTR_LFS_CNK.kicad_mod
Hardware/GSPCB/footprints_logger.pretty/: AMPHENOL_10118193-0001LF.kicad_mod  C10uF_CAPC1608X90N.kicad_mod  C15pF_CAPC1608X80N.kicad_mod  C1uF_CAPC1608X100N.kicad_mod  C2.2uF_CAP_CL10_SAM.kicad_mod  DIO_PMEG3050EP_115.kicad_mod  FB_HZ0603B102R-10.kicad_mod  LGA28R50P4X10_380X520X100.kicad_mod  QFN40P300X300X105-24N.kicad_mod  R100k_R0402.kicad_mod  R1k_RESC1508X55N.kicad_mod  R270k_R0402.kicad_mod  R27_RESC1608X50N.kicad_mod  R470_RESC1608X50N.kicad_mod  SOIC127P790X216-8N.kicad_mod  SON125P300X500X100-8N.kicad_mod  SOT-89_3MC_MCH.kicad_mod  XTAL320X150X90.kicad_mod  XTAL_ABM8-272-T3.kicad_mod
Hardware/GSPCB/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
gui/: .gitignore  CMakeLists.txt  Info.plist  README.md  app.py  app_icon.rc  cesium_rocket_demo.html  generate_icons.ps1  resources.qrc
gui/cmake/: FindArcGISRuntime.cmake
gui/include/: .gitignore
gui/include/linux/: README.txt  configure.sh
gui/include/macos/: README.txt  configure.sh
gui/include/windows/: README.txt  configure.ps1
gui/resources/icons/: README.txt
gui/src/: ArcTest.cpp  ArcTest.h  main.cpp
hardware/GSPCB/: Final_GSPCB-B_Cu.gbr  Final_GSPCB-B_Mask.gbr  Final_GSPCB-B_Silkscreen.gbr  Final_GSPCB-Edge_Cuts.gbr  Final_GSPCB-F_Cu.gbr  Final_GSPCB-F_Mask.gbr  Final_GSPCB-F_Paste.gbr  Final_GSPCB-F_Silkscreen.gbr  Final_GSPCB-NPTH.drl  Final_GSPCB-PTH.drl  Final_GSPCB-job.gbrjob  Final_GSPCB.kicad_prl
mini_antenna_tracker/src/: CMakeLists.txt
new-gs/rocketry-gs/: package-lock.json  package.json  vite.config.ts
new-gs/rocketry-gs/src/: App.css  App.tsx  config.ts  index.css
new-gs/rocketry-gs/src-tauri/: Cargo.toml  Entitlements.dev.plist  Info.plist  sign-dev.sh  sign-run.sh  tauri.conf.json
new-gs/rocketry-gs/src-tauri/.cargo/: config.toml
new-gs/rocketry-gs/src-tauri/src/: lib.rs  main.rs
new-gs/rocketry-gs/src-tauri/src/backend/: broker.rs  codec.rs  commands.rs  gps.rs  logger.rs  mod.rs  mqtt.rs  proto.rs  telemetry.rs  tile_cache.rs
new-gs/rocketry-gs/src/hooks/: useDemoMode.ts  useMQTT.ts
new-gs/rocketry-gs/src/proto/: groundStationCodec.ts
new-gs/rocketry-gs/src/store/: telemetryStore.ts
new-gs/rocketry-gs/src/types/: telemetry.ts
new-gs/rocketry-gs/src/utils/: attitude.ts  flightPhase.ts  units.ts
new-gs/rocketry-gs/tools/: usb_altitude_bridge.py
pico/: CMakeLists.txt  README.md  config.py  gps.py  servo.py  sx127x.py  tracking.py  transmitter.py
pico/include/: FreeRTOSConfig.h  lwipopts.h
pico/src/: CMakeLists.txt  board_profile.hpp  main.cpp  shared.hpp
pico/src/Proto/: ground_station.pb.c  ground_station.pb.h  mqtt_proto.hpp
pico/src/Tasks/Baro/: baro_task.cpp  baro_task.hpp
pico/src/Tasks/Demo/: demo_task.cpp  demo_task.hpp
pico/src/Tasks/Fusion/: fusion_task.cpp  fusion_task.hpp
pico/src/Tasks/GPS/: gps_task.cpp  gps_task.hpp
pico/src/Tasks/I2C/: i2c_task.cpp  i2c_task.hpp
pico/src/Tasks/IMU/: imu_task.cpp  imu_task.hpp
pico/src/Tasks/LoRa/: lora1_task.cpp  lora1_task.hpp  lora2_task.cpp  lora2_task.hpp  lora_task.cpp  lora_task.hpp
pico/src/Tasks/MQTT/: mqtt_task.cpp  mqtt_task.hpp
pico/src/Tasks/Mag/: mag_task.cpp  mag_task.hpp
pico/src/Tasks/NTP/: ntp_task.cpp  ntp_task.hpp
pico/src/Tasks/RTC/: rtc.cpp  rtc.hpp
pico/src/Tasks/Servo/: servo_task.cpp  servo_task.hpp
pico/src/Tasks/Starlink/: starlink.cpp  starlink.hpp
pico/src/Tasks/Stepper/: antenna_state.cpp  axis_task.cpp  cl57te.cpp  cl57te.hpp  stepper_task.cpp  stepper_task.hpp  tracker_control.cpp  tracker_state.cpp  tracker_state.hpp
pico/src/Tasks/UDP/: udp_recv_task.cpp  udp_recv_task.hpp
pico/src/Tasks/USB/: usb_task.cpp  usb_task.hpp
pico/src/Tasks/WiFi/: wifi_task.cpp  wifi_task.hpp
pico/src/Tasks/YawIMU/: yaw_imu_task.cpp  yaw_imu_task.hpp
proto/: ground_station.options  ground_station.proto
secondary_pico/: CMakeLists.txt
secondary_pico/include/: FreeRTOSConfig.h  lwipopts.h
secondary_pico/src/: CMakeLists.txt  main.cpp  shared.hpp
secondary_pico/src/Tasks/LoRa/: lora1_task.cpp  lora1_task.hpp  lora2_task.cpp  lora2_task.hpp  sigma2_forward.hpp
secondary_pico/src/Tasks/UDP/: udp_send_task.cpp  udp_send_task.hpp
secondary_pico/src/Tasks/USB/: usb_task.cpp  usb_task.hpp
secondary_pico/src/Tasks/WiFi/: wifi_task.cpp  wifi_task.hpp
server/: README.md  setup_mqtt_server.sh
telemetry/: README.md  launch.py  pyproject.toml
telemetry/dashboard/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
telemetry/dashboard/src/: App.css  App.tsx  config.ts  index.css
telemetry/dashboard/src/hooks/: useDemoMode.ts  useMQTT.ts
telemetry/dashboard/src/proto/: groundStationCodec.ts
telemetry/dashboard/src/store/: telemetryStore.ts
telemetry/dashboard/src/types/: telemetry.ts
telemetry/logger/: api.py  logger.py  pyproject.toml  requirements.txt  starlink_proxy.py  telemetry.db
telemetry/logger/proto/: ground_station_pb2.py
telemetry/logger/spacex_api/device/: account_shard_pb2.py  account_shard_pb2_grpc.py  command_pb2.py  command_pb2_grpc.py  common_pb2.py  common_pb2_grpc.py  device_pb2.py  device_pb2_grpc.py  dish_config_pb2.py  dish_config_pb2_grpc.py  dish_pb2.py  dish_pb2_grpc.py  gnss_pb2.py  gnss_pb2_grpc.py  rssi_scan_pb2.py  (+9 more)
tools/: usb_altitude_bridge.py
(+63 files in other folders)
